--- a/GdP_Rios_Martin_Vx.tex
+++ b/GdP_Rios_Martin_Vx.tex
@@ -17,7 +17,7 @@
 %\posgrado{Maestría en Internet de las cosas}
 
 % Tu nombre, se puede usar el cualquier lugar del documento con el comando \authorname
-\autor{Martín Julián Ríos} 
+\autor{Ing. Martín Julián Ríos} 
 
 % El nombre del director y co-director, se puede usar el cualquier lugar del documento con el comando \supname y \cosupname y \pertesupname y \pertecosupname
 \director{A definir}
@@ -68,9 +68,9 @@
 \hline
 \rowcolor[HTML]{C0C0C0} 
 Revisión & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Detalles de los cambios realizados} & Fecha      \\ \hline
-0      & Creación del documento                                 &\fechaInicioName \\ \hline
-%1      & Se completa hasta el punto 4 inclusive                 & dd/mm/aaaa \\ \hline
-%2      & Se completa hasta el punto 7 inclusive
+0      & Creación del documento                                 & 24/06/2021 \\ \hline
+1      & Se completa hasta el punto 5 inclusive                 & 08/07/2021 \\ \hline
+2      & Se completa hasta el punto 9 inclusive                 & 15/07/2021 \\ \hline
 %		  Se puede agregar algo más \newline
 %		  En distintas líneas \newline
 %		  Así                                                    & dd/mm/aaaa \\ \hline
@@ -125,16 +125,14 @@ Además, se ha detectado la necesidad de mejorar el método de apertura en los p
 
 Es por esto que este proyecto tiene como objetivo aprovechar las ventajas de las nuevas tecnologías de comunicación celular presentes en el país, para lograr un producto de bajo costo, dimensiones reducidas y bajo consumo energético, introduciendo además, un método seguro e inalámbrico de apertura. 
 
-Para alcanzar el objetivo mencionado se propone un sistema como el que se muestra en el diagrama de la Figura \ref{fig:diagBloques}.
+Para alcanzar el objetivo mencionado, se propone un sistema como el que se muestra en el diagrama de la Figura \ref{fig:diagBloques}.
 
 \begin{figure}[htpb]
 \centering 
-\includegraphics[width=.55\textwidth, angle=270]{./Figuras/diagrama_proyecto.pdf}
+\includegraphics[width=1\textwidth]{./Figuras/diagrama_proyecto.pdf}
 \caption{Diagrama en bloques del sistema}
 \label{fig:diagBloques}
-\end{figure}
-
-El presente trabajo se limitará al desarrollo e implementación del firmware para el dispositivo de seguimiento vehicular que forma parte del precinto electrónico. 
+\end{figure} 
 
 %\begin{consigna}{red} % El bloque "consigna" se usa para poner texto en rojo y dar una pequeña ayuda sobre cómo completar la sección
 %
@@ -200,7 +198,7 @@ Impulsor      & Facundo Carrizo   & \empclientename 	& Gerente General 	\\ \hlin
 Responsable   & \authorname       & FIUBA        	& Alumno 	\\ \hline
 Colaborador & Jonathan Strelczuk  & \empclientename 	& Responsable IT   	\\ \hline
 Orientador    & \supname	      & \pertesupname 	& Director Trabajo final \\ \hline
-Usuario final &  Instaladores de precintos electrónicos        &              	&        	\\ \hline
+Usuario final &  Instaladores de precintos electrónicos y personal de empresas de transporte        &              	&        	\\ \hline
 \end{tabularx}
 \end{table}
 
@@ -247,10 +245,12 @@ El propósito de este proyecto es desarrollar un precinto electrónico para moni
 %Explicitar además todo lo que no quede incluido (``El presente proyecto no incluye...'')
 %
 %\end{consigna}
+El presente trabajo se limitará al desarrollo e implementación del firmware para el dispositivo de seguimiento vehicular que forma parte del precinto electrónico.
+
 El presente proyecto incluye:
 \begin{itemize}
 \item Desarrollo e implementación del firmware para el AVL.
-\item Desarrollo de una página web HTML para realizar la interacción con el usuario mediante la comunicación Wi-Fi.
+\item Desarrollo de una página web para realizar la interacción con el usuario mediante la comunicación Wi-Fi.
 \item Integración y pruebas sobre un prototipo comercial.
 \item Documentación del sistema.
 \end{itemize}
@@ -266,11 +266,11 @@ El presente proyecto no incluye:
 
 Para el desarrollo del presente proyecto se supone que se cuenta con:
 \begin{itemize}
-	\item 1 prototipo del gabinete del precinto electrónico impreso en 3D con su mecanismo de apertura/cierre.
-	\item 1 placa 5G NB-IoT \& GNSS.
-	\item 1 placa que contenga el módulo Wi-Fi ATWINC1500, una memoria Flash o SD y que pueda ser conectada sobre la placa del ítem anterior.
-	\item 1 batería de Li-ion de 7,4 V y 6,4 Ah. 
-	\item 1 tarjeta SIM con un paquete de datos habilitado para la red LTE Cat-M y 2G.
+	\item Prototipo del gabinete del precinto electrónico impreso en 3D con su mecanismo de apertura/cierre.
+	\item Placa 5G NB-IoT \& GNSS.
+	\item Placa que contenga el módulo Wi-Fi ATWINC1500, una memoria Flash o SD y que pueda ser conectada sobre la placa del ítem anterior.
+	\item Batería de Li-ion de 7,4 V y 6,4 Ah. 
+	\item Tarjeta SIM con un paquete de datos habilitado para la red LTE Cat-M y 2G.
 \end{itemize}
 
 %\begin{consigna}{red}
@@ -286,6 +286,58 @@ Para el desarrollo del presente proyecto se supone que se cuenta con:
 
 \section{6. Requerimientos}
 \label{sec:requerimientos}
+
+\begin{enumerate}
+	\item Requerimientos de hardware
+		\begin{enumerate}
+			\item El equipo debe contar con un módulo celular con capacidad para conectarse a la red LTE Cat-M y 2G.
+			\item El equipo debe poseer un módulo GNSS.
+			\item El equipo debe contar con un módulo Wi-Fi.
+			\item El equipo debe ser alimentado con una batería de Li-Ion de 7,4 V 6,4 Ah.		
+			\item El equipo debe contar con:
+			\begin{itemize}
+				\item 1 salida digital para destrabar el mecanismo de cierre del precinto 
+				\item 2 salidas digitales para indicadores luminosos
+				\item 1 entrada digital para un pulsador
+				\item 1 entrada digital para detectar la apertura del precinto
+			\end{itemize}
+			\item El equipo debe contar con una memoria de almacenamiento.
+
+			
+%			\item El equipo debe tener un indicador luminoso para indicar el estado del precinto (Estado abierto $\rightarrow$ indicador encendido; estado cerrado $\rightarrow$ indicador apagado).
+%			\item El equipo debe tener un indicador luminoso para indicar el estado de la red Wi-Fi (Wi-Fi encendido $\rightarrow$ indicador encendido; Wi-Fi apagado $\rightarrow$ indicador apagado).
+%			\item El equipo debe poder apagar y encender la bobina de un electroimán con un consumo de 1 A y una tensión de alimentación de 5 V.
+%			\item El equipo debe tener un pulsador para encender la comunicación Wi-Fi.
+%			\item El equipo 
+			
+		\end{enumerate}
+		
+	\item Requerimientos funcionales
+		\begin{enumerate}
+			\item El equipo debe adquirir la posición georreferencial del módulo GNSS cada 1 minuto, generar un reporte con el formato establecido por la empresa \empclientename\, y enviarlo mediante comunicación celular a un servidor remoto.
+			\item El equipo debe generar un reporte de alarma y enviarlo al servidor remoto cada vez que se detecte la apertura del precinto.
+			\item El usuario debe poder realizar la apertura del precinto mediante un dispositivo con comunicación Wi-Fi o desde la plataforma Web de monitoreo de la empresa \empclientename
+			\item El equipo debe restringir el acceso a la comunicación Wi-Fi por medio de una clave que pueda ser modificada por el servidor remoto.
+			\item El usuario debe poder encender la red Wi-Fi mediante un pulsador.
+			\item El equipo debe almacenar en una memoria no volátil todos los reportes generados.
+			\item La memoria debe tener capacidad para almacenar al menos 10000 reportes. 
+			\item El equipo debe poder medir la tensión de la batería con que se alimenta.
+			\item El equipo debe permitir modificar los siguientes parámetros de operación:
+			\begin{itemize}
+				\item Tiempo de reporte entre 1 y 30 minutos
+				\item IP y puerto del servidor remoto
+				\item Código de identificación del precinto
+			\end{itemize}
+			\item El equipo debe indicar con un indicador luminoso el estado del precinto (abierto/cerrado) y con otro, el estado de la red Wi-Fi (encendida/apagada).			
+			\item El usuario debe poder descargar la memoria almacenada.
+		\end{enumerate}
+	\item Requerimientos de interfaz
+		\begin{enumerate}
+			\item El equipo debe poder comunicarse mediante una interfaz serie con el módulo celular por medio de comandos AT.
+			\item El equipo debe tener una interfaz serie disponible para realizar la descarga de memoria y la configuración de los parámetros de operación.
+			\item El equipo debe restringir el acceso a la interfaz serie de descarga de memoria y configuración de parámetros por medio de una clave.
+		\end{enumerate}		
+\end{enumerate}
 
 %\begin{consigna}{red}
 %Los requerimientos deben numerarse y de ser posible estar agruparlos por afinidad, por ejemplo:
@@ -326,6 +378,84 @@ Para el desarrollo del presente proyecto se supone que se cuenta con:
 \section{7. Historias de usuarios (\textit{Product backlog})}
 \label{sec:backlog}
 
+Para realizar la evaluación de las Historias de Usuario se tomaron en cuenta los siguientes tres parámetros: 
+
+\begin{itemize}
+	\item \textbf{Dificultad:} La cantidad de trabajo a realizar
+	\item \textbf{Complejidad:} El nivel de sofisticación del trabajo
+	\item \textbf{Incertidumbre:} El nivel de riesgo que involucra realizar la tarea
+\end{itemize}
+
+Luego, para estimar el tamaño de la historia (\textit{story point}), a cada parámetro se le asignó un peso tomando un valor de la serie de Fibonacci (0, 1, 2, 3, 5, 8, 13, 21, 34...) como se observa en el Cuadro \ref{tab:criterios_evaluacion}. A continuación, se sumó el peso de cada parámetro y al resultado obtenido se lo hizo corresponder con el valor próximo siguiente de la serie de Fibonacci.
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{|c|c|c|c|}
+\hline
+           				& \textbf{Baja} & \textbf{Media}& \textbf{Alta}\\ \hline
+\textbf{Dificultad} 	&	1   		&	3			&   5	\\ \hline
+\textbf{Complejidad}	&	1			&	5			&	13 	\\ \hline
+\textbf{Incertidumbre}	&   2   		&   3     		&  	5	\\ \hline
+\end{tabular}
+\caption{Criterios de evaluación y puntajes}
+\label{tab:criterios_evaluacion}
+\end{table}
+
+\subsection{Historia 1}
+``Como usuario quiero poder realizar la apertura del precinto con mi celular para no depender de una llave física.''
+
+\begin{itemize}
+	\item \textbf{Dificultad:} alta (3) $\rightarrow$ involucra varias horas de trabajo.
+	\item \textbf{Complejidad:} media (5) $\rightarrow$ si bien hay que implementar varias funciones y desarrollar una página Web no es una tarea muy compleja.
+	\item \textbf{Incertidumbre:} media (3) $\rightarrow$ Pueden surgir problemas de compatibilidad con algunos dispositivos.
+\end{itemize}
+
+\textbf{Story Point:} 13 (valor más próximo a 11 en la serie de Fibonacci) 
+
+\subsection{Historia 2}
+``Como desarrollador de la plataforma de monitoreo quiero recibir el valor de la tensión de batería para mostrarlo a los usuarios del sistema.''
+
+\begin{itemize}
+	\item \textbf{Dificultad:} baja (1) $\rightarrow$ involucra pocas horas de trabajo
+	\item \textbf{Complejidad:} baja (1) $\rightarrow$ las funciones a implementar son sencillas.
+	\item \textbf{Incertidumbre:} baja (2) $\rightarrow$ es una tarea que ya se ha realizado varias veces.
+\end{itemize}
+
+\textbf{Story Point:} 5 (el valor siguiente a 4 en la serie de Fibonacci) 
+
+\subsection{Historia 3}
+``Como usuario quiero que se encienda un indicador luminoso para saber que el precinto está destrabado y así retirar el grillete.''
+
+\begin{itemize}
+	\item \textbf{Dificultad:} baja (1) $\rightarrow$ involucra pocas horas de trabajo
+	\item \textbf{Complejidad:} baja (1) $\rightarrow$ las funciones a implementar son sencillas.
+	\item \textbf{Incertidumbre:} baja (2) $\rightarrow$ es una tarea que ya se ha realizado varias veces.
+\end{itemize}
+
+\textbf{Story Point:} 5 (el valor siguiente a 4 en la serie de Fibonacci) 
+
+\subsection{Historia 4}
+``Como usuario quiero descargar la memoria de almacenamiento para revisar todos los eventos ocurridos durante un traslado.''
+
+\begin{itemize}
+	\item \textbf{Dificultad:} media (1) $\rightarrow$ involucra pocas horas de trabajo
+	\item \textbf{Complejidad:} media (5) $\rightarrow$ las funciones a implementar son sencillas pero hay que establecer un protocolo de comunicación con el software de descarga.
+	\item \textbf{Incertidumbre:} baja (2) $\rightarrow$ hay ejemplos de otros desarrollos previos.
+\end{itemize}
+
+\textbf{Story Point:} 8 
+
+\subsection{Historia 5}
+``Como usuario quiero recibir una notificación cada vez que se realice una apertura del precinto para evitar retiros no autorizados.''
+
+\begin{itemize}
+	\item \textbf{Dificultad:} baja (1) $\rightarrow$ involucra pocas horas de trabajo
+	\item \textbf{Complejidad:} baja (1) $\rightarrow$ las funciones a implementar son sencillas.
+	\item \textbf{Incertidumbre:} baja (2) $\rightarrow$ es una tarea que ya se ha realizado varias veces.
+\end{itemize}
+
+\textbf{Story Point:} 5 (el valor siguiente a 4 en la serie de Fibonacci) 
+
 %\begin{consigna}{red}
 %Descripción: En esta sección se deben incluir las historias de usuarios y su ponderación (\textit{history points}). Recordar que las historias de usuarios son descripciones cortas y simples de una característica contada desde la perspectiva de la persona que desea la nueva capacidad, generalmente un usuario o cliente del sistema. La ponderación es un número entero que representa el tamaño de la historia comparada con otras historias de similar tipo.
 %
@@ -336,6 +466,14 @@ Para el desarrollo del presente proyecto se supone que se cuenta con:
 
 \section{8. Entregables principales del proyecto}
 \label{sec:entregables}
+
+\begin{itemize}
+	\item Código fuente del firmware
+	\item Prototipo del equipo funcionando
+	\item Documentación del código fuente
+	\item Manual de uso
+	\item Informe final
+\end{itemize}
 
 %\begin{consigna}{red}
 %
@@ -354,6 +492,44 @@ Para el desarrollo del presente proyecto se supone que se cuenta con:
 
 \section{9. Desglose del trabajo en tareas}
 \label{sec:wbs}
+
+Al comienzo de cada etapa se indica un subtotal en horas de las tareas que la componen.
+
+\begin{enumerate}
+\item Documentación y análisis preliminar								\hspace*{\fill}\textbf{70 hs}
+	\begin{enumerate}
+	\item Planificación del proyecto 									\hspace*{\fill}20 hs
+	\item Especificación de requisitos de software 						\hspace*{\fill}20 hs
+	\item Definición de las pruebas de aceptación						\hspace*{\fill}30 hs
+	\end{enumerate}
+\item Diseño e implementación del firmware								\hspace*{\fill}\textbf{320 hs}
+	\begin{enumerate}
+	\item Diseño de la arquitectura del firmware						\hspace*{\fill}30 hs
+	\item Preparación del entorno de trabajo del firmware				\hspace*{\fill}20 hs
+	\item Desarrollo del módulo para el manejo de entradas y salidas	\hspace*{\fill}30 hs
+	\item Desarrollo del módulo de comunicación con el módulo celular	\hspace*{\fill}40 hs
+	\item Desarrollo del módulo de comunicación con el módulo GNSS		\hspace*{\fill}30 hs
+	\item Desarrollo del módulo para la comunicación Wi-Fi				\hspace*{\fill}40 hs
+	\item Desarrollo de la página Web para interactuar con el usuario	\hspace*{\fill}30 hs
+	\item Desarrollo del módulo de almacenamiento en memoria			\hspace*{\fill}30 hs
+	\item Desarrollo del módulo de configuración y debug				\hspace*{\fill}30 hs
+	\item Integración de los diferentes módulos							\hspace*{\fill}40 hs	
+	\end{enumerate}
+\item Verificación y validación 										\hspace*{\fill}\textbf{110 hs}
+	\begin{enumerate}
+	\item Pruebas unitarias en cada módulo								\hspace*{\fill}30 hs
+	\item Pruebas de integración										\hspace*{\fill}40 hs
+	\item Prueba del sistema completo									\hspace*{\fill}40 hs
+	\end{enumerate}
+\item Cierre del proyecto												\hspace*{\fill}\textbf{100 hs}
+	\begin{enumerate}
+	\item Elaboración de la Memoria Técnica de Trabajo Final			\hspace*{\fill}60 hs
+	\item Elaboración del Manual de Uso									\hspace*{\fill}20 hs
+	\item Elaboración de la presentación de Trabajo Final 				\hspace*{\fill}20 hs
+	\end{enumerate}
+\end{enumerate}
+
+Cantidad total de horas: 												\hspace*{\fill}\textbf{600 hs}
 
 %\begin{consigna}{red}
 %El WBS debe tener relación directa o indirecta con los requerimientos.  Son todas las actividades que se harán en el proyecto para dar cumplimiento a los requerimientos. Se recomienda mostrar el WBS mediante una lista indexada:
