Se actualiza el Registro de cambios.

--- a/GdP_Rios_Martin_Vx.tex
+++ b/GdP_Rios_Martin_Vx.tex
@@ -71,6 +71,7 @@ Revisión & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Detalles de los cambios 
 0      & Creación del documento                                 & 24/06/2021 \\ \hline
 1      & Se completa hasta el punto 5 inclusive                 & 08/07/2021 \\ \hline
 2      & Se completa hasta el punto 9 inclusive                 & 15/07/2021 \\ \hline
+3      & Se completa hasta el punto 12 inclusive                & 29/07/2021 \\ \hline
 %		  Se puede agregar algo más \newline
 %		  En distintas líneas \newline
 %		  Así                                                    & dd/mm/aaaa \\ \hline
@@ -656,8 +657,8 @@ Cantidad total de horas: 												\hspace*{\fill}\textbf{600 hs}
 %\end{consigna}
 %
 %
-%\section{12. Presupuesto detallado del proyecto}
-%\label{sec:presupuesto}
+\section{12. Presupuesto detallado del proyecto}
+\label{sec:presupuesto}
 %
 %\begin{consigna}{red}
 %Si el proyecto es complejo entonces separarlo en partes:
